--- a/restaurateur/templates/order_items.html
+++ b/restaurateur/templates/order_items.html
@@ -34,7 +34,7 @@
         <td>{{ item.id }}</td>
         <td>{{ item.get_status_display }}</td>
         <td>{{ item.get_payment_method_display }}</td>
-        <td>{{ item.total }} р.</td>
+        <td>{{ item.total|floatformat:2 }} ₽</td>
         <td>{{ item.firstname }} {{ item.lastname }}</td>
         <td>{{ item.phonenumber }}</td>
         <td>{{ item.address }}</td>
@@ -48,7 +48,11 @@
               <summary style="cursor: pointer;">▶</summary>
               <ul>
                 {% for restaurant, distance in restaurants %}
-                  <li><i><b>{{ restaurant }} {{distance}}</b></i></li>
+                  {% if distance < 0  %}
+                    <li><i><b>{{ restaurant }} расстояние не определено</b></i></li>
+                  {% else %}
+                    <li><i><b>{{ restaurant }} {{ distance|floatformat:2 }} км.</b></i></li>
+                  {% endif %}
                 {% endfor %}
               </ul>
             </details>
